Fix validation of flex trips that end in a window